# ChangeLog for gnome-extra/nautilus-sendto
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/nautilus-sendto/ChangeLog,v 1.75 2014/04/26 20:09:32 pacho Exp $

  26 Apr 2014; Pacho Ramos <pacho@gentoo.org> -nautilus-sendto-3.6.1.ebuild,
  -nautilus-sendto-3.8.0.ebuild:
  drop old

  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> nautilus-sendto-3.8.1.ebuild:
  Fix wrong commit, bug 502160

  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> nautilus-sendto-3.8.1.ebuild:
  arch stable, bug 888

  08 Dec 2013; Pacho Ramos <pacho@gentoo.org> nautilus-sendto-3.8.1.ebuild:
  x86 stable, bug #478252

  30 Nov 2013; Pacho Ramos <pacho@gentoo.org> nautilus-sendto-3.8.1.ebuild:
  amd64 stable, bug #478252

*nautilus-sendto-3.8.1 (28 Sep 2013)

  28 Sep 2013; Pacho Ramos <pacho@gentoo.org> +nautilus-sendto-3.8.1.ebuild,
  -nautilus-sendto-3.6.0.ebuild, nautilus-sendto-3.6.1.ebuild,
  nautilus-sendto-3.8.0.ebuild:
  Version bump, drop old, rekeyword versions to be in sync with old 3.6.0 as
  looks like arm team forgot to keyword all versions (only did 3.6.0)

*nautilus-sendto-3.8.0 (28 Mar 2013)

  28 Mar 2013; Pacho Ramos <pacho@gentoo.org> +nautilus-sendto-3.8.0.ebuild:
  Version bump for Gnome 3.8

  02 Feb 2013; Agostino Sarubbo <ago@gentoo.org> nautilus-sendto-3.6.0.ebuild:
  Add ~arm, wrt bug #449220

*nautilus-sendto-3.6.1 (13 Jan 2013)

  13 Jan 2013; Gilles Dartiguelongue <eva@gentoo.org>
  nautilus-sendto-2.32.0.ebuild, -nautilus-sendto-3.0.3.ebuild,
  +nautilus-sendto-3.6.1.ebuild:
  Version bump. Drop old revision. Fix USE=doc issues, bug #356071.

  06 Jan 2013; Agostino Sarubbo <ago@gentoo.org> nautilus-sendto-3.6.0.ebuild:
  Add ~sparc, wrt bug #449220

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> nautilus-sendto-3.6.0.ebuild:
  Add ~alpha, wrt bug #449220

  01 Jan 2013; Agostino Sarubbo <ago@gentoo.org> nautilus-sendto-3.6.0.ebuild:
  Add ~ia64, wrt bug #449220

*nautilus-sendto-3.6.0 (24 Dec 2012)