@@ -14,14 +14,16 @@ AUX nautilus-sendto-2.28.5-commandline-help.patch 1123 SHA256 f5a928cf771d55f551
 AUX nautilus-sendto-2.28.5-fix-memleaks.patch 1596 SHA256 dd78e9382bd5e55f262c8609a50b9daf5bfb4c45c8d9d27e732ca74b8a338388 SHA512 5ffd9e41449f934977904cf1403012d1db1faa567a97eb16290b595c09ddb57d171eb5ab4b96b19ce6844fa9ebe9c8a728557c970a68ca2ca181cf88ff809dad WHIRLPOOL 8817fbb809c9e25c5df16258a8ef2aec014687afe89ebe1e2dc49bf76e0218874342acaeede13d435aad255ad8861fa10fd870f26a66cffe78f9b5cfdc4b40ed
 DIST nautilus-sendto-2.32.0.tar.bz2 446731 SHA256 890090b24381d91f079610d5454cb786a3ecefc91fa06649b2222be9bb02269a SHA512 4846155d9adf7c8e298b80a5487a7df0ff1e430c82c96b565413f63c015b84629d21a8b104d84ee8355f975044219c521a728d4a6d28862bafb0e871d86277d8 WHIRLPOOL 4a38f5d4533488751e758a82e6a11c496993f2f5c687f55af8638a86b661849f8aae0ac3baf14e7a07b3cb6f04d4fe852f710f5643be9ac271d1bf3952be2ad9
 DIST nautilus-sendto-3.8.1.tar.xz 344040 SHA256 03fa46bff271acdbdedab6243b2a84e5ed3daa19c81b69d087b3e852c8fe5dab SHA512 4559bf14604ca553be9ccc4a3961a93917cd643338dd1f86fa2edbde2a7c66c4db35204a19ca6fde27ceef48736d552bdad750c24ab4b26238e478cd88caaf3a WHIRLPOOL aeeb170614cb405f5aa7f923eaa32b33be7961d982d7c7a1a639a387f4002b41a4430864eff1b473006b9136248cfaf7763cacde9d5aecca8788cdcca3c8a049
+DIST nautilus-sendto-3.8.2.tar.xz 343032 SHA256 932811e781457b1dbf7b396e930d588f433b9ba756b10bde9f03f6d71d54bdc5 SHA512 51ae4b4a14d21677b043c3023d548c1984808ab3216a14b89988bf6883e8807c8215375026f0558723792aba1552518d53631388b18c1c4346813f6246b8a422 WHIRLPOOL a38dab01ee907a23d36afcd6ce90af8b5c08e064435bbe2a96eae522d6fab568b0e5e8390e7f002ba87ee4c8bd06e1293e25057c7dbf4343ee788e8dbb52418d
 EBUILD nautilus-sendto-2.32.0.ebuild 1437 SHA256 b99c065a4c145503a8c2c3cc52b7a0f98692a78804fb3b53ec796d1b9cd49112 SHA512 7655a3767d4d8e88ec4eedb8d27b4f8fbd3bf3600d324e3f039cd35f5914aa399d8117a90148eca811063de51df278061abeb9c1269a20158beca7de2bb18352 WHIRLPOOL 4aa579dc11ae3b6aa3ba6984196e09830f794af8df02589f2c5d1df349b4a62fca5d919bfcf1ebc0b2503b9fbe2cda1e914d1651d1d9786d7d6cdaa657730ede
 EBUILD nautilus-sendto-3.8.1.ebuild 761 SHA256 c3af6e755b23ffe93034af3ef16cff322ce090160cb309beb54197f546b0cf3b SHA512 af80e700a261e5bb86404bf73cc10d57b34de228d690472da9ee590f8caefa9a5d7a5e523974bc7ad448bdd4ec1aa0cba4885e1f290ecae361f87e736304f671 WHIRLPOOL 399c11d0ece178de0cfce30b0dbab9728f03fa6c762cedec290f309a530111c308a5eb39960581d555b73168b69bfd547a72bcaf10a1230bbba14cf09bda1950
-MISC ChangeLog 14951 SHA256 4865d35df384c5c04dedcf2206c7f2b452439c4a8a9eaccb09dd000191b06cec SHA512 b5a4c302472d7bf713c9b854bc278b353804d4f95e774e032486af21f67ade2f1c00e9f04c3f3feeac2e4f0d530885c7b820a343ef1ba5d82c40876c596b278d WHIRLPOOL 55dad1a321176cc82359c73392588c6e21afba494f45721113d041110efa1e8188e4007b01af68291d6b5986859198d55fecc17cc2d54b703ebc7e5f74dbe131
+EBUILD nautilus-sendto-3.8.2.ebuild 788 SHA256 ab1eed1a67a7d7f2fb608f5f7d9e725b75bc74d678d81e4b89182468feab5788 SHA512 54cbf31a145fc9f445ed5a1a78f0d64a4e20c5a420fbecbd99bbf162c8645305f2a1a9cab67dd27db1e02d7a0721cdd71850a447b63af372d259e36094340444 WHIRLPOOL 049a6febb73f656663675895e6e3c26ca9b8971ec05aa295fedbe88b26d77833de4fca92055f6b0ec32b59c8bcb299fc0e2ec16778131279811806ed8fe07b7b
+MISC ChangeLog 15082 SHA256 32b09e9df56f69138dba44c1fc2eba7181b9adec48e78184b682e98ba4407351 SHA512 8d36d6a66c7f6acac3e4c06aa85105cd99402ce0c5c76fbe7db3bbe206cacf1e6494d92cbe07b6a8934c381261d3731e0cc49e39dd368a97c3c888f073c6bd75 WHIRLPOOL fe1118db94bc878c2b1eb8f441388a9bf6524f295017fccfbdf74e1609d913c500ef14ae37b367db635637c08f47661df9ae97ad1791ee45dccc78cb97ee3ad6
 MISC metadata.xml 429 SHA256 d6ca2ca2610c15e8bcbd18c720ae8ecc99d5fa3408c9490f0cd78ae7edcfdc50 SHA512 9ebf3bb8297509dd76eb7665a8b7b77cc6d2a76ec1c0bf19606b03385527b4f6674a84b95e0633ae193ed5aa404e435468bced75a9e1dea51caed8ac7a29bdcf WHIRLPOOL d4fc1556fa18af058d9fa6759f5529e466922958818cf3759375823b384462ac6bd7facc34aec62e2ff797db63fb4bea0f491483d3e9149923093c75cd6ccac3
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlNcEn0ACgkQCaWpQKGI+9SQcQCgh8GORSJ+TF0v36FHvCVL2RIC
-bHAAn0RXgBo8kQaSqmV07KDuF/hb4tW2
-=C/+g
+iEYEAREIAAYFAlQkHgwACgkQCaWpQKGI+9QEgACfcldWA/k3/9QUuT7FJzeSD/5d
+8yMAn0Owqnvsr52V0MmHHfH0m1C3kUcp
+=LqWY
 -----END PGP SIGNATURE-----
