@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install postinst postrm preinst prepare unpack
+DEPEND=>=x11-libs/gtk+-2.90.3:3[X(+)] introspection? ( >=dev-libs/gobject-introspection-0.6.7 ) >=dev-util/gtk-doc-am-1.9 >=dev-util/intltool-0.35 sys-devel/gettext virtual/pkgconfig app-arch/xz-utils >=sys-apps/sed-4
+DESCRIPTION=A nautilus extension for sending files to locations
+EAPI=5
+HOMEPAGE=https://git.gnome.org/browse/nautilus-sendto/
+IUSE=+introspection debug
+KEYWORDS=~alpha ~amd64 ~arm ~ia64 ~ppc ~ppc64 ~sparc ~x86
+LICENSE=GPL-2+
+RDEPEND=>=x11-libs/gtk+-2.90.3:3[X(+)] introspection? ( >=dev-libs/gobject-introspection-0.6.7 )
+SLOT=0
+SRC_URI=mirror://gnome/sources/nautilus-sendto/3.8/nautilus-sendto-3.8.2.tar.xz
+_eclasses_=eutils	32548a82e42dc26e3312581476d2f20c	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome.org	8fef8f967214f56e08fa92d61163d891	gnome2	9637c29fc715b17a6328f24251129557	gnome2-utils	f658eba3cc594a21cf6eef4af47daa90	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=9007d6ba34012900b6730fe6f0bd8cf7
